--- a/advent-of-code2019.cabal
+++ b/advent-of-code2019.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 6c9e3b2cdda9f34436061d47302baa78b657c9a2cb15e74b2ec071963467de53
+-- hash: b4ecf5f33f2ee0ae28c7b2a43ac53194f57ea3b96762f612c350299c43747918
 
 name:           advent-of-code2019
 version:        0.1.0.0
@@ -29,8 +29,10 @@ library
   exposed-modules:
       Intcode
       Lib
+      Orbits
       Passwords
       Util
+      Tree
       Wires
   other-modules:
       Paths_advent_of_code2019
@@ -39,6 +41,7 @@ library
   build-depends:
       base >=4.7 && <5
     , hspec
+    , containers
   default-language: Haskell2010
 
 executable advent-of-code-exe
@@ -52,6 +55,7 @@ executable advent-of-code-exe
       advent-of-code2019
     , base >=4.7 && <5
     , hspec
+    , containers
   default-language: Haskell2010
 
 test-suite advent-of-code-test
@@ -66,4 +70,5 @@ test-suite advent-of-code-test
       advent-of-code2019
     , base >=4.7 && <5
     , hspec
+    , containers
   default-language: Haskell2010
