--- a/advent-of-code2019.cabal
+++ b/advent-of-code2019.cabal
@@ -34,6 +34,7 @@ library
       Util
       Tree
       Wires
+      Amplifiers
   other-modules:
       Paths_advent_of_code2019
   hs-source-dirs:
