Day 8 Part 1 complete

--- a/advent-of-code2019.cabal
+++ b/advent-of-code2019.cabal
@@ -35,6 +35,7 @@ library
       Tree
       Wires
       Amplifiers
+      Image
   other-modules:
       Paths_advent_of_code2019
   hs-source-dirs:
